[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/DnD_node_container.gd" type="Script" id=1]
[ext_resource path="res://assets/computer_pieces/piece_1.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 25.2665, 50.4342 )

[node name="DnD_node_container" type="Node2D"]
script = ExtResource( 1 )

[node name="area" type="Area2D" parent="."]

[node name="col" type="CollisionShape2D" parent="area"]
shape = SubResource( 1 )

[node name="s" type="Sprite" parent="."]
modulate = Color( 0.662745, 0.662745, 0.662745, 0.211765 )
scale = Vector2( 0.168745, 0.168745 )
texture = ExtResource( 2 )

[connection signal="area_entered" from="area" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="area" to="." method="_on_Area2D_area_exited"]
[connection signal="mouse_entered" from="area" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="area" to="." method="_on_Area2D_mouse_exited"]
